kubernetes/apps/talos1018/openspeedtest/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: openspeedtest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openspeedtest
    spec:
      containers:
        - name: openspeedtest
          image: "openspeedtest/latest:v2.0.6"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: "0.01"
              memory: "50Mi"
            requests:
              cpu: "0.001"
              memory: "20Mi"
