kubernetes/apps/talos1018/openspeedtest/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  labels:
    app.kubernetes.io/name: openspeedtest
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: openspeedtest
